@@ -1,9 +1,8 @@
 package it.pagopa.selfcare.onboarding.web.model;
 
-import it.pagopa.selfcare.commons.utils.TestUtils;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import it.pagopa.selfcare.commons.utils.TestUtils;
 import jakarta.validation.ConstraintViolation;
 import jakarta.validation.Validation;
 import jakarta.validation.Validator;
@@ -14,9 +13,8 @@ import java.lang.annotation.Annotation;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
-
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 class ProductResourceTest {
     private Validator validator;
@@ -49,16 +47,15 @@ class ProductResourceTest {
                     Class<? extends Annotation> annotationToCheck = toCheckMap.get(violation.getPropertyPath().toString());
                     return !violation.getConstraintDescriptor().getAnnotation().annotationType().equals(annotationToCheck);
                 })
-                .collect(Collectors.toList());
+                .toList();
         assertTrue(filteredViolations.isEmpty());
     }
 
     @Test
     void validateNotNullFields() {
         // given
-        ProductResource productResource = PRODUCT_RESOURCE;
         // when
-        Set<ConstraintViolation<Object>> violations = validator.validate(productResource);
+        Set<ConstraintViolation<Object>> violations = validator.validate(PRODUCT_RESOURCE);
         // then
         assertTrue(violations.isEmpty());
     }
